Closed Bug 866867 Opened 12 years ago Closed 12 years ago

test_spdy.js flaky with speculative connections

Categories

(Core :: Networking: HTTP, defect)

20 Branch
x86_64
Linux
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: mcmanus, Assigned: mcmanus)

References

Details

(Whiteboard: [spdy])

Attachments

(1 file)

test_spdy.js relies on a synchronous xhr at the start of the script to allow install a cert exception that the spdy tests rely on. Speculative connections can result in in some parallelism and out of order connection reuse - which in turn can make later tests fail that were depending on the exception being installed. 865314 removes a restriction that makes the initial ssl handshake with a host happen in serial and that in turn makes the spdy test go intermittent orange. we can fix this just by disabling speculative connections during the xhr setup portion of this test. https://tbpl.mozilla.org/?tree=Try&rev=5a5a844301bb
Attached patch patch 0Splinter Review
Attachment #743228 - Flags: review?(hurley)
Comment on attachment 743228 [details] [diff] [review] patch 0 Review of attachment 743228 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me
Attachment #743228 - Flags: review?(hurley) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: