bug 866867 test_spdy.js flaky with parallel connections r=hurley